# husky_navigation

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: waypoints.yaml
launch/: mapping_slam.launch.py  nav2_husky_warehouse.launch.py  waypoint_navigation.launch.py
maps/: office_map.pgm  office_map.yaml
scripts/: get_waypoints_state.py  navigate_waypoints_state.py  send_goal.py  send_waypoints.py  waypoint_state_machine.py  waypoints_demo.py
