<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypelayout="1.0"?>
<package format="3">
  <name>husky_navigation</name>
  <version>1.0.0</version>
  <description>Husky navigation launch files</description>
  <maintainer email="cassionst@gmail.com">Cassio Nicoletti</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  
  <depend>clearpath_viz</depend>
  <depend>clearpath_nav2_demos</depend>

  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>yasmin</exec_depend>
  <exec_depend>yasmin_ros</exec_depend>
  <exec_depend>yasmin_viewer</exec_depend>
  <exec_depend>nav2_msgs</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
</package>
